--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     <label for="status">Select status</label>
                     <select id="status" required="">
                         <option value="">Choose status</option>
-                        <option value="employed">employed</option>
-                        <option value="unemployed">unemployed</option>
+                        <option value="active">Active</option>
+                        <option value="inactive">Inactive</option>
                     </select>
                    
                 </div>
